--- a/ppt/index.html
+++ b/ppt/index.html
@@ -10,48 +10,84 @@
     <title>欣立社工</title>
     <!-- bootstrap 3.x , 4.x is very differend  -->
     <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" media="all">
     <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!--[if lt IE 9]>
+
+    <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     <script src="img/myjs.js"></script>
     <link rel="stylesheet" href="img/mycss.css">
-    <link rel="shortcut icon" href="img/myico.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
     <style>
-       /*  */
+        /*  */
     </style>
 
 </head>
 
 <body>
     <!-- div#nav+div#ad>(div#ad$*2)^+div#news>(div#news$*2)^+div#lk+div#addr {text}  img[alt=$#]  -->
-    <div id="logo"></div>
+    <!-- <div id="logo">
+        <div id="l_l">
+            <a class="navbar-brand" href="index.html" style="height: 64px;width: 230px;padding:  5px;
+                       background-image: url(img/logo.jpg);" title="泰勒士欢迎您！"></a>
+        </div>
+        <div id="l_r">
+
+            <div class="ap_aArea">
+                <div id="ap_aqr">
+                    <img class="rms_img" src="" >
+                </div>
+                <img class="ap_icon rms_img" src="">
+            </div>
+            <button type="button" class="btn btn-default">网站管理</button>
+
+        </div>
+    </div> -->
+
+    <!-- <div id="nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html" style="height: 64px;width: 230px;padding:  5px;
+                       background-image: url(img/1.jpg);" title="欣立社工欢迎您！"></a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="list.html">扫码访问</a></li>
+                    <li><a href="detail.html">网站管理</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div> -->
+
+
     <nav id="nav" class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand active" href="index.html">欣立社工</a>
-            </div>
-            <div>
-                <ul class="nav navbar-nav">
-                    <li><a href="list.html">文章列表页</a></li>
-                    <li><a href="detail.html">文章内容页</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    网站管理
-                    <b class="caret"></b>
+                <a class="navbar-brand active" href="index.html">
+                    <img id="nav_logo" src="img/logo.jpg" alt="欣立LOGO">
                 </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">jmeter</a></li>
-                            <li><a href="#">EJB</a></li>
-                            <li><a href="#">Jasper Report</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">分离的链接</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">另一个分离的链接</a></li>
-                        </ul>
-                    </li>
+            </div>
+            <div id="nav_r">
+                <ul class="nav navbar-nav navbar-right">
+                    <li id="nav_qr"><a href="javascript:void(0);" title="扫码访问">
+                        <i class="fa fa-qrcode fa-2x"></i>
+                       &nbsp; 扫码访问
+                        <img id="nav_qr_img" src="img/qrn.png" alt="">
+                    </a></li>
+
+                    <li><a href="javascript:void(0);" title="网站管理">
+                        <i class="fa fa-user fa-2x"></i>
+                       &nbsp; 网站管理</a></li>
+
                 </ul>
             </div>
         </div>
@@ -79,143 +115,172 @@
             </div>
         </div>
 
-        <div id="ad2" class="col-xs-12 col-md-4" >
-            <ul id="myTab" class="nav nav-tabs">
-    <li class="active">
-        <a href="#home" data-toggle="tab">
-			 通知
-		</a>
-    </li>
-    <li><a href="#ios" data-toggle="tab">公告</a></li>
-
-</ul>
-<div id="myTabContent" class="tab-content">
-    <div class="tab-pane fade in active" id="home">
-        <a href="#" class="list-group-item ">
-	免费域名注册
-</a>
-        <a href="#" class="list-group-item">24*7 支持</a>
-        <a href="#" class="list-group-item">免费 Window 空间托管</a>
-        <a href="#" class="list-group-item">图像的数量</a>
-        <a href="#" class="list-group-item">每年更新成本</a>
-    </div>
-    <div class="tab-pane fade" id="ios">
-        <a href="#" class="list-group-item ">
-	免费域名注册
-</a>
-        <a href="#" class="list-group-item">24*7 支持</a>
-        <a href="#" class="list-group-item">免费 Window 空间托管</a>
-        <a href="#" class="list-group-item">图像的数量</a>
-        <a href="#" class="list-group-item">每年更新成本</a>
-    </div>
-
-</div>
+        <div id="ad2" class="">
+            <div class="btn-group">
+                <button type="button" class="btn btn-default">走进欣立</button>
+                <button type="button" class="btn btn-default">招贤纳士</button>
+                <button type="button" class="btn btn-default">信息公示</button>
+            </div>
         </div>
-
     </div>
     <!--  -->
     <div id="news" class="container">
-        <div class="row">
-            <h3>新闻动态：</h3>
+        <!-- <div class="col-xs-12 col-md-6">
+            <h3>新闻资讯：</h3>
             <hr>
         </div>
-        <div id="news1" class=" col-xs-12 col-md-6 carousel-fade carousel slide">
+        <div class="col-xs-12 col-md-6">
+            <h3>项目情况：</h3>
+            <hr>
+        </div> -->
+
+        <div id="news1" class="carousel slide col-xs-12 col-md-6 carousel-fade">
+             <div class="row">
+            <h3>新闻资讯：</h3>
+            <!-- <hr> -->
+        </div> 
+            <!-- 轮播（Carousel）指标 -->
+            <ol id="news1_1" class="carousel-indicators">
+                <li data-target="#news1" data-slide-to="0" class="active"></li>
+                <li data-target="#news1" data-slide-to="1"></li>
+                <li data-target="#news1" data-slide-to="2"></li>
+            </ol>
             <!-- 轮播（Carousel）项目 -->
             <div class="carousel-inner">
                 <div class="item active">
                     <img src="img/8.jpg" alt="First slide">
-                    <div class="carousel-caption">wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold</div>
+                    <div class="carousel-caption">
+                        <a href="">新闻资讯</a>
+                    </div>
                 </div>
                 <div class="item">
                     <img src="img/10.jpg" alt="Second slide">
-                    <div class="carousel-caption">wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold</div>
+                    <div class="carousel-caption">标题 2</div>
                 </div>
                 <div class="item">
                     <img src="img/12.jpg" alt="Third slide">
-                    <div class="carousel-caption">wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold</div>
+                    <div class="carousel-caption">标题 3</div>
                 </div>
             </div>
-            <!-- 轮播（Carousel）导航 -->
-            <a class="carousel-control left" href="#news1" data-slide="prev">&lsaquo;</a>
-            <a class="carousel-control right" href="#news1" data-slide="next">&rsaquo;</a>
         </div>
 
-        <div id="news2" class="col-xs-12 col-md-6" >
-            <table class="table table-striped">
-                <tbody>
-                    <tr>
-                        <td>欣立新闻。。。</td>
-                        <td>2017-12-12</td>
-                    </tr>
-                    <tr>
-                        <td>欣立新闻。。。</td>
-                        <td>2017-12-12</td>
-                    </tr>
-                    <tr>
-                        <td>欣立新闻。。。</td>
-                        <td>2017-12-12</td>
-                    </tr>
-                    <tr>
-                        <td>欣立新闻。。。</td>
-                        <td>2017-12-12</td>
-                    </tr>
-                    <tr>
-                        <td>欣立新闻。。。</td>
-                        <td>2017-12-12</td>
-                    </tr>
-                    <tr>
-                        <td>欣立新闻。。。</td>
-                        <td>2017-12-12</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <!-- <ul class="list-group">
-                <li class="list-group-item">免费域名注册</li>
-                <li class="list-group-item">免费 Window 空间托管</li>
-                <li class="list-group-item">图像的数量</li>
-                <li class="list-group-item">24*7 支持</li>
-                <li class="list-group-item">每年更新成本</li>
-            </ul> -->
+        <div id="news2" class="col-xs-12 col-md-6">
+            <div class="row">
+            <h3>项目情况：</h3>
+            <!-- <hr> -->
         </div>
+            <ul id="myTab" class="nav nav-tabs">
+                <li class="active">
+                    <a href="#home" data-toggle="tab">思明区</a>
+                </li>
+                <li><a href="#ios" data-toggle="tab">集美区</a></li>
+            </ul>
+        
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade in active" id="home">
+                <table class="table table-striped">
+                    <tbody>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="tab-pane fade" id="ios">
+                <table class="table table-striped">
+                    <tbody>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                        <tr>
+                            <td>欣立新闻。。。</td>
+                            <td>2017-12-12</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
+        </div>
+        </div>
     </div>
+
     <!--  -->
     <div id="lk" class="container">
-                <div class="row">
+        <div class="row">
             <h3>友情链接：</h3>
             <hr>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-2">
             <a href="#" class="thumbnail">
                 <img src="img/2.jpg" class="img-rounded img-responsive">
             </a>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-2">
             <a href="#" class="thumbnail">
                 <img src="img/6.jpg" class="img-rounded img-responsive">
             </a>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-2">
             <a href="#" class="thumbnail">
                 <img src="img/8.jpg" class="img-rounded img-responsive">
             </a>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-6 col-md-2">
             <a href="#" class="thumbnail">
                 <img src="img/10.jpg" class="img-rounded img-responsive">
+            </a>
+        </div>
+        <div class="col-xs-6 col-md-2">
+            <a href="#" class="thumbnail">
+                <img src="img/4.jpg" class="img-rounded img-responsive">
+            </a>
+        </div>
+        <div class="col-xs-6 col-md-2">
+            <a href="#" class="thumbnail">
+                <img src="img/12.jpg" class="img-rounded img-responsive">
             </a>
         </div>
     </div>
     <!--  -->
     <div id="addr">
         <p>
-            <a href="index.html">回到首页</a>&nbsp; |&nbsp;
+            <!-- <a href="index.html">回到首页</a>&nbsp; |&nbsp;
             <a href="aboutus.html" title="" target="_blank">走进欣立</a>&nbsp; |&nbsp;
-            <a href="hiring.html" title="" target="_blank">招贤纳士</a>
+            <a href="hiring.html" title="" target="_blank">招贤纳士</a> -->
             <br/> ©&nbsp;2017 &nbsp;欣立社工 &nbsp;闽ICP备15000000号
         </p>
 
     </div>
 </body>
+
 </html>
