--- a/ppt/index.html
+++ b/ppt/index.html
@@ -27,260 +27,278 @@
 
 </head>
 
-<body>
-    <!-- div#nav+div#ad>(div#ad$*2)^+div#news>(div#news$*2)^+div#lk+div#addr {text}  img[alt=$#]  -->
-    <!-- <div id="logo">
-        <div id="l_l">
-            <a class="navbar-brand" href="index.html" style="height: 64px;width: 230px;padding:  5px;
-                       background-image: url(img/logo.jpg);" title="泰勒士欢迎您！"></a>
-        </div>
-        <div id="l_r">
-
-            <div class="ap_aArea">
-                <div id="ap_aqr">
-                    <img class="rms_img" src="" >
-                </div>
-                <img class="ap_icon rms_img" src="">
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×
+				</button>
+                <h4 class="modal-title" id="myModalLabel">
+                    用户登录-网站管理
+                </h4>
             </div>
-            <button type="button" class="btn btn-default">网站管理</button>
 
-        </div>
-    </div> -->
+            <div class="modal-body">
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label for="firstname" class="col-sm-2 control-label">用户名：</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="firstname" placeholder="请输入用户名">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname" class="col-sm-2 control-label">密&nbsp; &nbsp;码：</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="lastname" placeholder="请输入密码">
+                        </div>
+                    </div>
+                    <!-- <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+                                <label>
+          <input type="checkbox">请记住我
+        </label>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-success">登录</button>
+                        </div>
+                    </div>
+                    <div class="form-group has-error">
+                        <label class="col-sm-2 control-label" for="inputError">输入错误</label>
+                        <div class="col-sm-10">
+                            <input disabled type="text" class="form-control" id="inputError">
+                        </div>
+                    </div>
 
-    <!-- <div id="nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html" style="height: 64px;width: 230px;padding:  5px;
-                       background-image: url(img/1.jpg);" title="欣立社工欢迎您！"></a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="list.html">扫码访问</a></li>
-                    <li><a href="detail.html">网站管理</a></li>
-                    </ul>
-                </div>
+                </form>
             </div>
-        </div> -->
 
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    关闭
+				</button>
+                <!-- <button type="button" class="btn btn-primary">
+					登录
+				</button> -->
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 
-    <nav id="nav" class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand active" href="index.html">
+<nav id="nav" class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand active" href="index.html">
                     <img id="nav_logo" src="img/logo.jpg" alt="欣立LOGO">
                 </a>
-            </div>
-            <div id="nav_r">
-                <ul class="nav navbar-nav navbar-right">
-                    <li id="nav_qr"><a href="javascript:void(0);" title="扫码访问">
+        </div>
+        <div id="nav_r">
+            <ul class="nav navbar-nav navbar-right">
+                <li id="nav_qr"><a href="javascript:void(0);" title="扫码访问">
                         <i class="fa fa-qrcode fa-2x"></i>
                        &nbsp; 扫码访问
                         <img id="nav_qr_img" src="img/qrn.png" alt="">
                     </a></li>
 
-                    <li><a href="javascript:void(0);" title="网站管理">
+                <li><a href="javascript:void(0);" title="网站管理" data-toggle="modal" data-target="#myModal">
                         <i class="fa fa-user fa-2x"></i>
-                       &nbsp; 网站管理</a></li>
+                       &nbsp; 网站管理</a>
+                </li>
 
-                </ul>
-            </div>
+            </ul>
         </div>
-    </nav>
-    <!--  -->
-    <div id="ad" class="container">
-        <div id="ad1" class="carousel slide" data-ride="carousel" data-interval="2000">
-            <!-- 轮播（Carousel）指标 -->
-            <ol class="carousel-indicators">
-                <li data-target="#ad1" data-slide-to="0" class="active"></li>
-                <li data-target="#ad1" data-slide-to="1"></li>
-                <li data-target="#ad1" data-slide-to="2"></li>
-            </ol>
-            <!-- 轮播（Carousel）项目 -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="img/1.jpg" alt="First slide">
-                </div>
-                <div class="item">
-                    <img src="img/3.jpg" alt="Second slide">
-                </div>
-                <div class="item">
-                    <img src="img/5.jpg" alt="Third slide">
-                </div>
-            </div>
-        </div>
+    </div>
+</nav>
+<!--  -->
 
-        <div id="ad2" class="">
-            <div class="btn-group">
-                <button type="button" class="btn btn-default">走进欣立</button>
-                <button type="button" class="btn btn-default">招贤纳士</button>
-                <button type="button" class="btn btn-default">信息公示</button>
+<div id="ad" class="container">
+    <div id="ad1" class="carousel slide" data-ride="carousel" data-interval="2000">
+        <!-- 轮播（Carousel）指标 -->
+        <ol class="carousel-indicators">
+            <li data-target="#ad1" data-slide-to="0" class="active"></li>
+            <li data-target="#ad1" data-slide-to="1"></li>
+            <li data-target="#ad1" data-slide-to="2"></li>
+        </ol>
+        <!-- 轮播（Carousel）项目 -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/1.jpg" alt="First slide">
+            </div>
+            <div class="item">
+                <img src="img/3.jpg" alt="Second slide">
+            </div>
+            <div class="item">
+                <img src="img/5.jpg" alt="Third slide">
             </div>
         </div>
     </div>
-    <!--  -->
-    <div id="news" class="container">
-        <!-- <div class="col-xs-12 col-md-6">
-            <h3>新闻资讯：</h3>
-            <hr>
-        </div>
-        <div class="col-xs-12 col-md-6">
-            <h3>项目情况：</h3>
-            <hr>
-        </div> -->
 
-        <div id="news1" class="carousel slide col-xs-12 col-md-6 carousel-fade">
-             <div class="row">
+    <div id="ad2" class="">
+        <div class="btn-group">
+            <a href="#" type="button" class="btn btn-default">走进欣立</a>
+            <a href="#" type="button" class="btn btn-default">招贤纳士</a>
+            <a href="#" type="button" class="btn btn-default">信息公示</a>
+        </div>
+    </div>
+</div>
+<!--  -->
+<div id="news" class="container">
+    <div id="news1" class="carousel slide col-xs-12 col-md-6 carousel-fade">
+        <div class="row">
             <h3>新闻资讯：</h3>
             <!-- <hr> -->
-        </div> 
-            <!-- 轮播（Carousel）指标 -->
-            <ol id="news1_1" class="carousel-indicators">
-                <li data-target="#news1" data-slide-to="0" class="active"></li>
-                <li data-target="#news1" data-slide-to="1"></li>
-                <li data-target="#news1" data-slide-to="2"></li>
-            </ol>
-            <!-- 轮播（Carousel）项目 -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="img/8.jpg" alt="First slide">
-                    <div class="carousel-caption">
-                        <a href="">新闻资讯</a>
-                    </div>
+        </div>
+        <!-- 轮播（Carousel）指标 -->
+        <ol id="news1_1" class="carousel-indicators">
+            <li data-target="#news1" data-slide-to="0" class="active"></li>
+            <li data-target="#news1" data-slide-to="1"></li>
+            <li data-target="#news1" data-slide-to="2"></li>
+        </ol>
+        <!-- 轮播（Carousel）项目 -->
+        <div id="news1_2" class="carousel-inner">
+            <div class="item active">
+                <img src="img/8.jpg" alt="First slide">
+                <div class="carousel-caption">
+                    <a href="">让按钮看起来像个链接 (仍然保留按钮行为)</a>
                 </div>
-                <div class="item">
-                    <img src="img/10.jpg" alt="Second slide">
-                    <div class="carousel-caption">标题 2</div>
+            </div>
+            <div class="item">
+                <img src="img/10.jpg" alt="Second slide">
+                <div class="carousel-caption">
+                    <a href="">让按钮看起来像个链接 (仍然保留按钮行为)</a>
                 </div>
-                <div class="item">
-                    <img src="img/12.jpg" alt="Third slide">
-                    <div class="carousel-caption">标题 3</div>
+            </div>
+            <div class="item">
+                <img src="img/12.jpg" alt="Third slide">
+                <div class="carousel-caption">
+                    <a href="">让按钮看起来像个链接 (仍然保留按钮行为)</a>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div id="news2" class="col-xs-12 col-md-6">
-            <div class="row">
+    <div id="news2" class="col-xs-12 col-md-6">
+        <div class="row">
             <h3>项目情况：</h3>
             <!-- <hr> -->
         </div>
-            <ul id="myTab" class="nav nav-tabs">
-                <li class="active">
-                    <a href="#home" data-toggle="tab">思明区</a>
-                </li>
-                <li><a href="#ios" data-toggle="tab">集美区</a></li>
-            </ul>
-        
+
+        <ul id="myTab" class="nav nav-tabs">
+            <li class="active">
+                <a href="#home" data-toggle="tab">集美区</a>
+            </li>
+            <li><a href="#ios" data-toggle="tab">思明区</a></li>
+        </ul>
+
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade in active" id="home">
-                <table class="table table-striped">
+                <table class="table">
                     <tbody>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="tab-pane fade" id="ios">
-                <table class="table table-striped">
+                <table class="table">
                     <tbody>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                         <tr>
-                            <td>欣立新闻。。。</td>
-                            <td>2017-12-12</td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
+                            <td><a href="#" class="list-group-item">a项目</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
 
         </div>
-        </div>
     </div>
+</div>
 
-    <!--  -->
-    <div id="lk" class="container">
-        <div class="row">
-            <h3>友情链接：</h3>
-            <hr>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
+<!--  -->
+<div id="lk" class="container">
+    <div class="row">
+        <h3>友情链接：</h3>
+        <hr>
+    </div>
+    <div class="col-xs-6 col-md-2">
+        <a href="#" class="thumbnail">
                 <img src="img/2.jpg" class="img-rounded img-responsive">
             </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
+    </div>
+    <div class="col-xs-6 col-md-2">
+        <a href="#" class="thumbnail">
                 <img src="img/6.jpg" class="img-rounded img-responsive">
             </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
+    </div>
+    <div class="col-xs-6 col-md-2">
+        <a href="#" class="thumbnail">
                 <img src="img/8.jpg" class="img-rounded img-responsive">
             </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
+    </div>
+    <div class="col-xs-6 col-md-2">
+        <a href="#" class="thumbnail">
                 <img src="img/10.jpg" class="img-rounded img-responsive">
             </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
+    </div>
+    <div class="col-xs-6 col-md-2">
+        <a href="#" class="thumbnail">
                 <img src="img/4.jpg" class="img-rounded img-responsive">
             </a>
-        </div>
-        <div class="col-xs-6 col-md-2">
-            <a href="#" class="thumbnail">
+    </div>
+    <div class="col-xs-6 col-md-2">
+        <a href="#" class="thumbnail">
                 <img src="img/12.jpg" class="img-rounded img-responsive">
             </a>
-        </div>
     </div>
-    <!--  -->
-    <div id="addr">
-        <p>
-            <!-- <a href="index.html">回到首页</a>&nbsp; |&nbsp;
-            <a href="aboutus.html" title="" target="_blank">走进欣立</a>&nbsp; |&nbsp;
-            <a href="hiring.html" title="" target="_blank">招贤纳士</a> -->
-            <br/> ©&nbsp;2017 &nbsp;欣立社工 &nbsp;闽ICP备15000000号
-        </p>
+</div>
+<!--  -->
+<div id="addr">
+    <p>
+        <br> ©&nbsp;2017 &nbsp;欣立社工 &nbsp;闽ICP备15000000号
+    </p>
 
-    </div>
+</div>
 </body>
 
 </html>
